--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body
+<body>
 <header class="cabecalho">
+  <img class="logocabecalho"  src ="logo 1.svg" alt="logo a moda"
     <ul class="lista_cabecalho">
       <l1 class="item lista_cabecalho">home</li>
         <li class="item lista_cabecalho"> moda</li>
