--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </ul>
     </header>
 
-    <h1> Moda para iniciantes</h1>
+    <h1> Moda para iniciant</h1>
   </p> a Moda não é besteira ou um so passa tempo , e sim um estilo de vida </p>
 
 
