--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <header class="cabecalho">
   <img class="logocabecalho"  src ="logo 1.svg" alt="logo a moda"
     <ul class="lista_cabecalho">
-      <l1 class="item lista_cabecalho">home</li>
+      <l1 class="item lista_cabecalho"><a href="index.htmla">home</a></li>
         <li class="item lista_cabecalho"> moda</li>
         <li class="item lisrta_cabecalho"> historia da moda
       </ul>
     </header>
 
-    <h1> Moda para iniciant</h1>
+    <h1> Moda para iniciantes</h1>
   </p> a Moda não é besteira ou um so passa tempo , e sim um estilo de vida </p>
 
 
