--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <header class="cabecalho">
   <img class="logocabecalho"  src ="logo 1.svg" alt="logo a moda"
     <ul class="lista_cabecalho">
-      <l1 class="item lista_cabecalho"><a href="index.htmla">home</a></li>
-        <li class="item lista_cabecalho"> moda</li>
+      <l1 class="item lista_cabecalho"><a href="index.html">home</a></li>
+        <li class="item lista_cabecalho"> <a href="moda.html">moda</a></li>
         <li class="item lisrta_cabecalho"> historia da moda
       </ul>
     </header>
